WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119272
Broken build with build-webkit --no-webgl
https://bugs.webkit.org/show_bug.cgi?id=119272
Summary
Broken build with build-webkit --no-webgl
Antonio Gomes
Reported
2013-07-30 13:26:37 PDT
It seems code guarded by CSS_SHADER uses Angle, which is not built with --no-webgl.
Attachments
Patch
(929 bytes, patch)
2013-08-07 13:58 PDT
,
Ragner Magalhaes
no flags
Details
Formatted Diff
Diff
Patch
(1.13 KB, patch)
2013-08-12 07:32 PDT
,
Ragner Magalhaes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ragner Magalhaes
Comment 1
2013-08-07 13:58:22 PDT
Created
attachment 208298
[details]
Patch CSS Shaders requires WebGL. Add error message to dependency failure.
Antonio Gomes
Comment 2
2013-08-08 05:19:21 PDT
@achicu: CSS Shaders require ANGLE to build, and this is not available if WEBGL if disabled from say build-webkit. Does it make sense to have a hard dependency on each other, as the patch does?
Antonio Gomes
Comment 3
2013-08-08 05:21:15 PDT
Comment on
attachment 208298
[details]
Patch please read
http://www.webkit.org/coding/contributing.html
Ragner Magalhaes
Comment 4
2013-08-12 07:32:01 PDT
Created
attachment 208539
[details]
Patch
Antonio Gomes
Comment 5
2013-08-12 10:52:21 PDT
Comment on
attachment 208539
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=208539&action=review
> Source/WTF/ChangeLog:8 > + CSS_SHADERS requires WEBGL enabled.
Is not it more accurate to say that it requeres ANGLE, which is only available when WebGL is on?
Alexandru Chiculita
Comment 6
2013-08-12 11:09:39 PDT
Comment on
attachment 208539
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=208539&action=review
>> Source/WTF/ChangeLog:8 >> + CSS_SHADERS requires WEBGL enabled. > > Is not it more accurate to say that it requeres ANGLE, which is only available when WebGL is on?
Custom Filters are implemented on top of WebGL. We are only using ANGLE to validate the shaders, so we need both.
Antonio Gomes
Comment 7
2013-08-12 11:17:21 PDT
Comment on
attachment 208539
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=208539&action=review
>>> Source/WTF/ChangeLog:8 >>> + CSS_SHADERS requires WEBGL enabled. >> >> Is not it more accurate to say that it requeres ANGLE, which is only available when WebGL is on? > > Custom Filters are implemented on top of WebGL. We are only using ANGLE to validate the shaders, so we need both.
ok thanks
WebKit Commit Bot
Comment 8
2013-08-12 11:40:12 PDT
Comment on
attachment 208539
[details]
Patch Clearing flags on attachment: 208539 Committed
r153951
: <
http://trac.webkit.org/changeset/153951
>
WebKit Commit Bot
Comment 9
2013-08-12 11:40:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug