Broken build with build-webkit --no-webgl https://bugs.webkit.org/show_bug.cgi?id=119272

Patch by Ragner Magalhaes <ranger.n@samsung.com> on 2013-08-12
Reviewed by Alexandru Chiculita.

CSS_SHADERS requires WEBGL enabled.
Add error message to dependency failure.

* wtf/FeatureDefines.h:

Canonical link: https://commits.webkit.org/137641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153951 268f45cc-cd09-0410-ab3c-d52691b4dbfc